Update project description in index.html

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <section id="work">
       <div class="card section-card reveal" style="margin-top:14px">
         <h2 class="h">Selected Projects</h2>
-        <p class="p">A few things I’m building and contributing to. (Replace links + descriptions as you finish.)</p>
+        <p class="p">A few things I’m building and contributing to. (Production-focused systems demonstrating backend architecture, personalization, and AI-driven workflows.)</p>
       </div>
 
       <div class="projects" style="margin-top:14px">
